# optax-zclip

./: .gitignore  LICENSE  README.md  pyproject.toml
src/optax_zclip/: __init__.py  zclip.py
tests/: zclip_test.py
