[project]
name = "optax-zclip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pierre-Louis Nordmann", email = "pierrelouis.nordmann@gmail.com" },
]
requires-python = ">=3.9"
dependencies = ["jax>=0.4.30", "jaxlib>=0.4.30", "optax>=0.2.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
